--- a/index.html
+++ b/index.html
@@ -57,12 +57,11 @@
                         Coronavirus</h1>
                 </div>
                 <div class="header_buttons">
-                    <a href="#" class="button header_button">READ MORE</a>
-                    <a href="#" class="button header_button">ABOUT US</a>
+                    <a href="#" class="header_button">READ MORE</a>
+                    <a href="#" class="header_button">ABOUT US</a>
                 </div>
             </div>
         </div>
-        
     </header>
     <input type="checkbox" name="input" class="navbar_input" id="navbar_input">
     <div class="navbar_media">
@@ -72,6 +71,17 @@
         <a href="#" class="navbar_media_a navbar_link_hover navbar_link">NEWS</a>
         <a href="#" class="navbar_media_a navbar_link_hover navbar_link">DOCTORES</a>
         <a href="#" class="navbar_media_a navbar_link_hover navbar_link">CONTACT</a>
+    </div>
+    <div class="about_virus">
+        <div class="about_virus_left">
+            <h2>ABOUT CORONA VIRUS</h2>
+            <div class="about_virus_line"></div>
+            <p>English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for</p>
+            <a href="#" class="button about_virus_button">ABOUT MORE</a>
+        </div>
+        <div class="about_virus_right">
+            <img src="./IMG/about.png" alt="">
+        </div>
     </div>
 </body>
 </html>
