--- a/index.html
+++ b/index.html
@@ -83,5 +83,16 @@
             <img src="./IMG/about.png" alt="">
         </div>
     </div>
+    <div class="corona_is about_virus">
+        <!-- <div class="corona_is_img about_virus_right"> -->
+        <img class="corona_is_img" src="./IMG/corona.png" alt="">
+        <!-- </div> -->
+        <div class="corona_is_right about_virus_left">
+            <h2>CORONAVIRUS <br> WHAT IT IS?</h2>
+            <p>when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using</p>
+            <a href="#" class="button about_virus_button">ABOUT MORE</a>
+        </div>
+        
+    </div>
 </body>
 </html>
